--- a/style.css
+++ b/style.css
@@ -11,6 +11,7 @@ body nav {
   border: 20px solid #27ae60;
   background: #27ae60;
   align-items: center;
+  padding: 0px 40px 0px 5px;
   height: 100%;
   width: 100%;
 }
@@ -21,7 +22,7 @@ body nav .navbar-logo {
   text-decoration: none;
 }
 body nav .navbar-logo .brandtext {
-  color: gainsboro;
+  color: #ffffff;
 }
 body nav .navbar-menu {
   font-size: 10px;
@@ -32,6 +33,9 @@ body nav .navbar-menu .menu-links {
   margin-left: 20px;
   margin-right: px;
   text-decoration: none;
+}
+body nav .navbar-menu .menu-links:hover {
+  color: #ffffff;
 }
 body .hero hero-container .container-left h1 {
   color: gainsboro;
@@ -46,5 +50,6 @@ body .hero hero-container .container-left button {
   color: gainsboro;
 }
 body .hero .container-right img {
-  color: gainsboro;
+  height: 100%;
+  width: 100%;
 }/*# sourceMappingURL=style.css.map */
