--- a/style.scss
+++ b/style.scss
@@ -14,6 +14,7 @@ body{
         border: 20px solid $primarycolor;
         background: $primarycolor;
         align-items: center;
+        padding: 0px 40px 0px 5px;
         height: 100%;
         width: 100%;
         
@@ -23,7 +24,7 @@ body{
             font-weight: 400;
             text-decoration: none;
             .brandtext{
-                color: gainsboro;
+                color: #ffffff;
             }
         }
         .navbar-menu{
@@ -34,6 +35,10 @@ body{
                 margin-left: 20px;
                 margin-right: px;
                 text-decoration: none;
+
+                &:hover{
+                    color: #ffffff;
+                }
             }
         }
     }
@@ -56,7 +61,8 @@ body{
         }
         .container-right{
             img{
-                color: gainsboro;
+                height: 100%;
+                width: 100%;
             }
         }
     }
